# CloseGL

./: .gitignore  CMakeLists.txt  Laboratorio_5.depend  Laboratorio_5.layout  README.md  README.txt  closeFrag.glsl  closeVert.glsl  frag.glsl  triangles.frag  triangles.vert  vert.glsl
data/: cubeira.mtl
src/: main.cpp  main.cpp.save-failed  shader_fragment.glsl  shader_vertex.glsl
src/triangles/: Makefile  Makefilec  Myobj.cpp  example_glfw_opengl3  imgui.ini  main  main.cpp  matrices.cpp  raster.cpp  triangles  triangles.cpp
src/triangles/imgui/: imgui_impl_glfw_gl3.cpp
src/triangles/imgui/backends/: imgui_impl_opengl3.cpp
